--- a/index.html
+++ b/index.html
@@ -6,7 +6,29 @@
     <title>Excursion</title>
   </head>
   <body>
-    <h1>Discover hidden places in the world around you</h1>
-    <a href="https://qt41vnj9mda7oitu3q9ivd6qd9ofnmd51khso4aftc7ot08klcog.codecademy.cloud/#">Download Excursion (Coming soon!)</a>
+    <div class="content">
+      <h1>Discover hidden places in the world around you</h1>
+      <p>
+        <a href="https://qt41vnj9mda7oitu3q9ivd6qd9ofnmd51khso4aftc7ot08klcog.codecademy.cloud/#">Download Excursion (Coming soon!)</a>
+      </p>
+      <p><video width="404" height="720" autoplay>
+        <source src="resources/videos/excursion.mp4" type="video/mp4">
+      </video></p>
+      <h1>Your personal travel guide</h1>
+      <h2>Excursion remembers places you like, and recommends new points of interest around you.</h2>
+      <p>
+        <img src="resources/images/camp.jpg" />
+      </p>
+      <p>
+        <img src="resources/images/phone.png" />
+      </p>
+      <h1>Coming Soon for iPhone and Android</h1>
+      <p>
+        <a href="https://qt41vnj9mda7oitu3q9ivd6qd9ofnmd51khso4aftc7ot08klcog.codecademy.cloud/#">Download Excursion (Coming soon!)</a>
+      </p>
+      <div class="footer">
+        <p>© Excursion</p>
+      </div>
+    </div>
   </body>
 </html>
