--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <p>
         <a href="https://qt41vnj9mda7oitu3q9ivd6qd9ofnmd51khso4aftc7ot08klcog.codecademy.cloud/#">Download Excursion (Coming soon!)</a>
       </p>
-      <p><video width="404" height="720" autoplay>
+      <p><video width="404" height="720" autoplay loop>
         <source src="resources/videos/excursion.mp4" type="video/mp4">
       </video></p>
       <h1>Your personal travel guide</h1>
