modified the html tag

--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
       <p><video width="404" height="720" autoplay loop>
         <source src="resources/videos/excursion.mp4" type="video/mp4">
       </video></p>
-      <h1>Your personal travel guide</h1>
-      <h2>Excursion remembers places you like, and recommends new points of interest around you.</h2>
+      <h2>Your personal travel guide</h2>
+      <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
       <p>
         <img src="resources/images/camp.jpg" />
       </p>
       <p>
         <img src="resources/images/phone.png" />
       </p>
-      <h1>Coming Soon for iPhone and Android</h1>
+      <h2>Coming Soon for iPhone and Android</h2>
       <p>
         <a href="https://qt41vnj9mda7oitu3q9ivd6qd9ofnmd51khso4aftc7ot08klcog.codecademy.cloud/#">Download Excursion (Coming soon!)</a>
       </p>
